--- a/rs/tests/financial_integrations/rosetta/BUILD.bazel
+++ b/rs/tests/financial_integrations/rosetta/BUILD.bazel
@@ -40,6 +40,7 @@ system_test_nns(
 
 system_test_nns(
     name = "rosetta_make_transactions_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -79,6 +80,8 @@ system_test_nns(
 
 system_test_nns(
     name = "rosetta_neuron_disburse_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -119,6 +122,7 @@ system_test_nns(
 
 system_test_nns(
     name = "rosetta_neuron_follow_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -139,6 +143,7 @@ system_test_nns(
 
 system_test_nns(
     name = "rosetta_neuron_hotkey_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -159,6 +164,7 @@ system_test_nns(
 
 system_test_nns(
     name = "rosetta_neuron_info_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -179,6 +185,7 @@ system_test_nns(
 
 system_test_nns(
     name = "rosetta_neuron_maturity_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -199,6 +206,7 @@ system_test_nns(
 
 system_test_nns(
     name = "rosetta_neuron_spawn_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -219,6 +227,7 @@ system_test_nns(
 
 system_test_nns(
     name = "rosetta_neuron_staking_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -239,6 +248,7 @@ system_test_nns(
 
 system_test_nns(
     name = "rosetta_neuron_voting_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
