--- a/rs/tests/consensus/BUILD.bazel
+++ b/rs/tests/consensus/BUILD.bazel
@@ -8,6 +8,7 @@ BACKUP_RUNTIME_DEPS = ["//rs/tests:backup/binaries"]
 
 system_test_nns(
     name = "backup_manager_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -233,6 +234,7 @@ system_test_nns(
 
 system_test_nns(
     name = "subnet_splitting_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
@@ -380,6 +382,7 @@ system_test_nns(
 
 system_test_nns(
     name = "adding_nodes_to_subnet_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on on_push_to_master.
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
     tags = [
