--- a/rs/ethereum/cketh/minter/BUILD.bazel
+++ b/rs/ethereum/cketh/minter/BUILD.bazel
@@ -204,7 +204,6 @@ rust_binary(
             ":minter",
             "//packages/ic-ethereum-types",
             "//packages/icrc-ledger-types:icrc_ledger_types",
-            "//rs/ethereum/cketh/test_utils",
             "//rs/ethereum/ledger-suite-orchestrator/test_utils",
             "//rs/state_machine_tests",
             "//rs/types/base_types",
@@ -217,14 +216,15 @@ rust_binary(
             "@crate_index//:serde",
             "@crate_index//:serde_bytes",
             "@crate_index//:serde_json",
-        ],
+        ] + extra_deps,
     )
-    for (name_suffix, extra_data, extra_env) in [
-        ("", [], {}),
+    for (name_suffix, extra_data, extra_env, extra_deps) in [
+        ("", [], {}, ["//rs/ethereum/cketh/test_utils"]),
         (
             "_evm_rpc",
             ["@evm_rpc.wasm.gz//file"],
             {"EVM_RPC_CANISTER_WASM_PATH": "$(rootpath @evm_rpc.wasm.gz//file)"},
+            ["//rs/ethereum/cketh/test_utils:test_utils_evm_rpc"]
         ),
     ]
 ]
