--- a/rs/tests/networking/utils/BUILD.bazel
+++ b/rs/tests/networking/utils/BUILD.bazel
@@ -16,8 +16,11 @@ rust_library(
         "//rs/registry/keys",   
         "//rs/registry/subnet_type",
         "//rs/tests/driver:ic-system-test-driver",
+        "//rs/types/base_types",
         "//rs/types/types",
         "@crate_index//:candid",
+        "@crate_index//:rand",
+        "@crate_index//:rand_chacha",
         "@crate_index//:reqwest",
         "@crate_index//:slog",
         "@crate_index//:slog-async",
