--- a/Cargo.toml
+++ b/Cargo.toml
@@ -355,6 +355,7 @@ members = [
     "rs/tests/boundary_nodes/utils",
     "rs/tests/ckbtc",
     "rs/tests/consensus",
+    "rs/tests/consensus/backup",
     "rs/tests/consensus/orchestrator",
     "rs/tests/consensus/subnet_recovery",
     "rs/tests/consensus/tecdsa",
