--- a/rs/tests/networking/utils/BUILD.bazel
+++ b/rs/tests/networking/utils/BUILD.bazel
@@ -18,7 +18,9 @@ rust_library(
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/types/base_types",
         "//rs/types/types",
+        "@crate_index//:anyhow",
         "@crate_index//:candid",
+        "@crate_index//:ic-agent",
         "@crate_index//:rand",
         "@crate_index//:rand_chacha",
         "@crate_index//:reqwest",
