--- a/.github/workflows/test-namespace-darwin.yaml
+++ b/.github/workflows/test-namespace-darwin.yaml
@@ -12,6 +12,7 @@ on:
 # cancel the previous one if necessary; except on master where we want to build
 # every commit
 concurrency:
+  # never scheduled so head_ref or ref will always be set (no run_id fallback)
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
   cancel-in-progress: ${{ github.ref_name != 'master' }}
 
