--- a/requirements.in
+++ b/requirements.in
@@ -11,7 +11,7 @@ invoke
 jira>=3.4.1
 junit-xml
 loguru
-matplotlib>=3.6.2, <3.7
+matplotlib>=3.6.2
 mypy
 nested_lookup>=0.2.25
 node_semver>=0.9.0
@@ -26,4 +26,4 @@ simple-parsing
 tqdm
 uuid
 PyGithub>=2.3.0
-numpy>=1.26.4 # numpy is only required by other packages, but breaks on python3.12 if version is not correctly set
+# numpy>=1.26.4 # numpy is only required by other packages, but breaks on python3.12 if version is not correctly set
