--- a/rs/pocket_ic_server/BUILD.bazel
+++ b/rs/pocket_ic_server/BUILD.bazel
@@ -49,6 +49,7 @@ LIB_DEPENDENCIES = [
     "@crate_index//:bytes",
     "@crate_index//:candid",
     "@crate_index//:clap_3_2_25",
+    "@crate_index//:ctrlc",
     "@crate_index//:flate2",
     "@crate_index//:form_urlencoded",
     "@crate_index//:fqdn",
@@ -99,6 +100,7 @@ TEST_DEPENDENCIES = [
     "@crate_index//:ic-btc-interface",
     "@crate_index//:ic-cdk",
     "@crate_index//:ic-utils",
+    "@crate_index//:nix",
     "@crate_index//:rcgen",
     "@crate_index//:reqwest",
     "@crate_index//:serde",
