fix(IDX): fix concurrency logic on ci-main (#2045)
Co-authored-by: IDX GitHub Automation <IDX GitHub Automation>
Co-authored-by: Bas van Dijk <bas@dfinity.org>

--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -15,9 +15,9 @@ on:
   workflow_call:
 
 # runs for the same workflow are cancelled on PRs but not on master
-# explanation: on scheduled jobs neither head_ref or ref is set, so the fallback is run_id and master will run without being cancelled
+# explanation: on push to master head_ref is not set, so we want it to fall back to run_id so it is not cancelled
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref || github.run_id }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 permissions: read-all
