--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -13,9 +13,9 @@ on:
   # Used as reusable workflow within release-testing workflow
   workflow_call:
 # runs for the same workflow are cancelled on PRs but not on master
-# explanation: on scheduled jobs neither head_ref or ref is set, so the fallback is run_id and master will run without being cancelled
+# explanation: on push to master head_ref is not set, so we want it to fall back to run_id so it is not cancelled
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref || github.run_id }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 permissions: read-all
 env:
