--- a/rs/tests/networking/utils/Cargo.toml
+++ b/rs/tests/networking/utils/Cargo.toml
@@ -23,6 +23,7 @@ ic-system-test-driver = { path = "../../driver" }
 ic-types = { path = "../../../types/types" }
 rand = { workspace = true }
 rand_chacha = { workspace = true }
+registry-canister = {path = "../../../registry/canister"}
 reqwest = { workspace = true }
 slog = { workspace = true }
 slog-async = { workspace = true }
