--- a/Cargo.toml
+++ b/Cargo.toml
@@ -365,6 +365,7 @@ members = [
     "rs/tests/networking",
     "rs/tests/networking/canisters",
     "rs/tests/networking/canister_http",
+    "rs/tests/networking/utils",
     "rs/tests/nested",
     "rs/tests/nns",
     "rs/tests/nns/sns",
