--- a/.github/workflows/schedule-rc.yml
+++ b/.github/workflows/schedule-rc.yml
@@ -22,7 +22,7 @@ jobs:
         shell: bash
         run: |
           git config --global user.email "infra+github-automation@dfinity.org"
-          git config --global user.name "IDX GitLab Automation"
+          git config --global user.name "IDX GitHub Automation"
 
           RC_BRANCH_NAME="rc--$(date '+%Y-%m-%d_%H-%M')"
           git switch --force-create "$RC_BRANCH_NAME" HEAD
