chore(IDX): upgrade python to 3.12 (#2041)
This PR upgrades python from 3.10 to 3.12. Because `requirements.txt` is
used by both bazel and independent CI jobs, we need to make the
following changes all at once:
- upgrade bazel `python_version` to 3.12
- regenerate `requirements.txt` and resolve any version issues
- remove relative imports as `rules_python` doesn't support them anymore
- fix the bazel target python dependency reference
- upgrade CI jobs to 3.12

---------

Co-authored-by: IDX GitHub Automation <IDX GitHub Automation>

--- a/requirements.in
+++ b/requirements.in
@@ -22,9 +22,11 @@ paramiko>=2.11.0
 parse>=1.19.0
 pytest
 pytest-cov
-PyYAML>=5.4.1
+PyYAML>=6.0.2
 requests>=2.26.0
 simple-parsing
 tqdm
 uuid
 PyGithub>=2.3.0
+# packages not directly used, but required by other packages and need to be manually version pinned for python 3.12
+typing_extensions>=4.6.0
