--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -301,13 +301,8 @@ http_archive(
     name = "tla_apalache",
     build_file_content = """
 package(default_visibility = ["//visibility:public"])
-filegroup(
-  name = "contents",
-  srcs = [
-    "bin/apalache-mc",
-    "lib/apalache.jar",
-  ],
-)
+
+exports_files([ "bin/apalache-mc" ])
     """,
     sha256 = "173a683707c2a639c955328746461cad39e4b8a5adff95e156ce3bf376ba293b",
     strip_prefix = "apalache-0.44.11",
