add next version check

--- a/rs/ledger_suite/icp/ledger/Cargo.toml
+++ b/rs/ledger_suite/icp/ledger/Cargo.toml
@@ -52,3 +52,4 @@ ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
 [features]
 notify-method = []
 icp-allowance-getter = []
+next-ledger-version = []
