--- a/rs/ledger_suite/icp/ledger/BUILD.bazel
+++ b/rs/ledger_suite/icp/ledger/BUILD.bazel
@@ -4,48 +4,58 @@ load("ledger_canisters.bzl", "LEDGER_CANISTER_DATA", "LEDGER_CANISTER_RUSTC_ENV"
 
 package(default_visibility = ["//visibility:public"])
 
-rust_library(
-    name = "ledger",
-    srcs = [
-        "src/dfn_runtime.rs",
-        "src/lib.rs",
-        "src/tests.rs",
-    ],
-    compile_data = [
-        "//rs/ledger_suite/icp/archive:ledger-archive-node-canister-wasm.wasm.gz",
-    ],
-    crate_name = "ledger_canister",
-    proc_macro_deps = [
-        # Keep sorted.
-        "@crate_index//:async-trait",
-    ],
-    rustc_env = {
-        "LEDGER_ARCHIVE_NODE_CANISTER_WASM_PATH": "$(execpath //rs/ledger_suite/icp/archive:ledger-archive-node-canister-wasm.wasm.gz)",
-    },
-    version = "0.9.0",
-    deps = [
-        # Keep sorted.
-        "//packages/ic-ledger-hash-of:ic_ledger_hash_of",
-        "//packages/icrc-ledger-types:icrc_ledger_types",
-        "//rs/crypto/sha2",
-        "//rs/ledger_suite/common/ledger_canister_core",
-        "//rs/ledger_suite/common/ledger_core",
-        "//rs/ledger_suite/icp:icp_ledger",
-        "//rs/ledger_suite/icrc1",
-        "//rs/limits",
-        "//rs/rust_canisters/dfn_candid",
-        "//rs/rust_canisters/dfn_core",
-        "//rs/types/base_types",
-        "@crate_index//:candid",
-        "@crate_index//:ic-stable-structures",
-        "@crate_index//:intmap",
-        "@crate_index//:lazy_static",
-        "@crate_index//:num-traits",
-        "@crate_index//:serde",
-        "@crate_index//:serde_bytes",
-        "@crate_index//:serde_cbor",
-    ],
-)
+[
+    rust_library(
+        name = "ledger" + name_suffix,
+        srcs = [
+            "src/dfn_runtime.rs",
+            "src/lib.rs",
+            "src/tests.rs",
+        ],
+        compile_data = [
+            "//rs/ledger_suite/icp/archive:ledger-archive-node-canister-wasm.wasm.gz",
+        ],
+        crate_features = features,
+        crate_name = "ledger_canister",
+        proc_macro_deps = [
+            # Keep sorted.
+            "@crate_index//:async-trait",
+        ],
+        rustc_env = {
+            "LEDGER_ARCHIVE_NODE_CANISTER_WASM_PATH": "$(execpath //rs/ledger_suite/icp/archive:ledger-archive-node-canister-wasm.wasm.gz)",
+        },
+        version = "0.9.0",
+        deps = [
+            # Keep sorted.
+            "//packages/ic-ledger-hash-of:ic_ledger_hash_of",
+            "//packages/icrc-ledger-types:icrc_ledger_types",
+            "//rs/crypto/sha2",
+            "//rs/ledger_suite/common/ledger_canister_core",
+            "//rs/ledger_suite/common/ledger_core",
+            "//rs/ledger_suite/icp:icp_ledger",
+            "//rs/ledger_suite/icrc1",
+            "//rs/limits",
+            "//rs/rust_canisters/dfn_candid",
+            "//rs/rust_canisters/dfn_core",
+            "//rs/types/base_types",
+            "@crate_index//:candid",
+            "@crate_index//:ic-stable-structures",
+            "@crate_index//:intmap",
+            "@crate_index//:lazy_static",
+            "@crate_index//:num-traits",
+            "@crate_index//:serde",
+            "@crate_index//:serde_bytes",
+            "@crate_index//:serde_cbor",
+        ],
+    )
+    for (name_suffix, features) in [
+        ("", []),
+        (
+            "_next_version",
+            ["next-ledger-version"],
+        ),
+    ]
+]
 
 rust_test(
     name = "ledger_test",
@@ -73,6 +83,11 @@ rust_ledger_canister(
     crate_features = ["notify-method"],
 )
 
+rust_ledger_canister(
+    name = "ledger-canister-wasm-next-version",
+    extra_deps = [":ledger_next_version"],
+)
+
 rust_test(
     name = "ledger_canister_unit_test",
     compile_data = LEDGER_CANISTER_DATA,
@@ -91,6 +106,7 @@ rust_ic_test(
     data = [
         ":ledger-canister-wasm",
         ":ledger-canister-wasm-allowance-getter",
+        ":ledger-canister-wasm-next-version",
         "@mainnet_icp_ledger_canister//file",
     ],
     env = {
@@ -98,6 +114,7 @@ rust_ic_test(
         "ICP_LEDGER_DEPLOYED_VERSION_WASM_PATH": "$(rootpath @mainnet_icp_ledger_canister//file)",
         "LEDGER_CANISTER_WASM_PATH": "$(rootpath :ledger-canister-wasm)",
         "LEDGER_CANISTER_ALLOWANCE_GETTER_WASM_PATH": "$(rootpath :ledger-canister-wasm-allowance-getter)",
+        "LEDGER_CANISTER_NEXT_VERSION_WASM_PATH": "$(rootpath :ledger-canister-wasm-next-version)",
     },
     flaky = True,
     deps = [
